Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignNumObjBoolObj.quorum
class Main
    action Main
        Boolean v
        v:SetValue(true)
        Test(v)
    end

    action Test(Number var)
    end
end
